adding responsive now

--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
         color: whitesmoke;
         background: #620404;
     }
+        @media (max-width: 500px) {
+        .container {
+          position: relative;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, 35%);
+          padding: 1.5rem;
+          width: 90vw;
+          height: 50vh;
+          background: gray;
+          border: 2px solid whitesmoke;
+        }
     </style>
 </head>
 <body>
